[package]
name = "neutron-db-opa-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name="neutron-db-opa-proxy"
path="src/bin/main.rs"

[dependencies]
async-trait = { version = "^0.1" }
axum = { version = "^0.8", features = ["macros"] }
base64 = "0.22.1"
bytes = { version = "^1.10" }
chrono = { version = "^0.4" }
clap = { version = "^4.5", features = ["derive"] }
color-eyre = { version = "^0.6" }
config = { version = "^0.15", features = ["ini"] }
derive_builder = { version = "^0.20" }
eyre = { version = "^0.6" }
mockall_double = { version = "^0.3" }
regex = { version = "^1.11"}
sea-orm = { version = "^1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "^1.0" }
serde_bytes = "0.11.17"
serde_json = { version = "^1.0" }
thiserror = { version = "^2.0" }
tokio = { version = "^1.47", features = ["fs", "macros", "signal", "rt-multi-thread"] }
tower = { version = "^0.5" }
tower-http = { version = "^0.6", features = ["compression-full", "request-id", "sensitive-headers", "trace", "util"] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3" }
utoipa = { version = "^5.4", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "^0.2" }
utoipa-swagger-ui = { version = "^9.0", features = ["axum", "vendored"], default-features = false }

[dev-dependencies]
http-body-util = "^0.1"
mockall = { version = "^0.13" }
sea-orm = { version = "*", features = ["mock"]}

[profile.release]
opt-level = 3
strip = true
debug = false
lto = true
